package cms_8120;
import "type/cmd.proto";
option java_package = "com.hikvision.finance.fms.cms.hpp.center";
option java_outer_classname = "CollectconfigProto";
option java_generic_services = true;

//采集时间表
message Collectconfig
{
    //必须字段
    optional int32 id                       = 1;    // 在数据库中的流水号
    optional string ip                      = 2;    // 采集平台IP
    optional int32 port                     = 3;    // 采集平台端口
    optional int32 ntype                    = 4;    // 类型
    optional int32 nsort                    = 5;    // 
    optional string workTimeBegin           = 6;    // 上传开始时间
    optional string workTimeEnd             = 7;    // 上传结束时间
    optional string kmsIp                   = 8;    // KMS的IP
}

message ReqCollectconfig
{
    optional int32 cmd                      = 1;    //CMD_DT_COLLECTCONFIG_INFO
    optional int32 id                       = 2;    //采集平台在数据库的流水号
}

message RspCollectconfig
{
    optional int32 cmd                      = 1;    //CMD_DT_COLLECTCONFIG_INFO
    optional Collectconfig collectconfig    = 2;    
}

service ModifyCollectconfigService {
	
	rpc QueryCollectconfigInfo(ReqCollectconfig) returns (RspCollectconfig);			// CMD_DT_COLLECTCONFIG_INFO(获取采集平台信息)
	
}